scripts/nullaway/original/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8.txt
../original/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/main/ParserSpec.java:188: error: [NullAway] returning @Nullable expression from method with @NonNull return type
						return null;
						^
    (see http://t.uber.com/nullaway )
../original/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/main/ParserSpec.java:447: error: [NullAway] returning @Nullable expression from method with @NonNull return type
						return null;
						^
    (see http://t.uber.com/nullaway )
../original/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/main/FileItaco.java:24: error: [NullAway] assigning @Nullable expression to @NonNull field
	private String baseNomeFile = null;
	               ^
    (see http://t.uber.com/nullaway )
../original/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/main/FileItaco.java:25: error: [NullAway] assigning @Nullable expression to @NonNull field
	private String directory = null;
	               ^
    (see http://t.uber.com/nullaway )
../original/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/CTarget.java:497: error: [NullAway] unboxing of a @Nullable value
		int dimensione = mappaDimensioneVettori.get(nome);
		                                           ^
    (see http://t.uber.com/nullaway )
../original/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/JasminTarget.java:419: error: [NullAway] passing @Nullable parameter 'e.getLocalizedMessage()' where @NonNull is required
			throw new JasminException(e.getLocalizedMessage());
			                                               ^
    (see http://t.uber.com/nullaway )
../original/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/JasminTarget.java:425: error: [NullAway] passing @Nullable parameter 'e.getLocalizedMessage()' where @NonNull is required
			throw new JasminException(e.getLocalizedMessage());
			                                               ^
    (see http://t.uber.com/nullaway )
../original/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/JasminTarget.java:598: error: [NullAway] dereferenced expression parametriFunzioni.get(nome) is @Nullable
		if (parametriFunzioni.get(nome).endsWith("V")) {
		                               ^
    (see http://t.uber.com/nullaway )
../original/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/JasminTarget.java:621: error: [NullAway] unboxing of a @Nullable value
		costante(dimensioneVettori.get(nome));
		                              ^
    (see http://t.uber.com/nullaway )
../original/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/JasminTarget.java:621: error: [NullAway] passing @Nullable parameter 'dimensioneVettori.get(nome)' where @NonNull is required
		costante(dimensioneVettori.get(nome));
		                              ^
    (see http://t.uber.com/nullaway )
../original/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/JasminTarget.java:631: error: [NullAway] dereferenced expression parametriFunzioni.get(nome) is @Nullable
		if (!parametriFunzioni.get(nome).endsWith("V")) {
		                                ^
    (see http://t.uber.com/nullaway )
../original/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/RubyTarget.java:466: error: [NullAway] unboxing of a @Nullable value
		int dimensione = mappaDimensioneVettori.get(nome);
		                                           ^
    (see http://t.uber.com/nullaway )
../original/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/istruzioni/funzioni/DefinizioneFunzione.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
	private String idValoreRitorno = null;
	               ^
    (see http://t.uber.com/nullaway )
13 errors
